--- a/sb-init.org
+++ b/sb-init.org
@@ -326,96 +326,52 @@
 #+END_SRC
 
 * AUCTeX and RefTeX
-  :LOGBOOK:
-  CLOCK: [2016-11-17 Thu 07:50]--[2016-11-17 Thu 08:00] =>  0:10
-  CLOCK: [2016-06-03 Fri 08:30]--[2016-06-03 Fri 08:50] =>  0:20
-  CLOCK: [2016-06-02 Thu 07:20]--[2016-06-02 Thu 09:00] =>  1:40
-  CLOCK: [2016-05-25 Wed 08:10]--[2016-05-25 Wed 08:50] =>  0:40
-  CLOCK: [2016-05-24 Tue 08:00]--[2016-05-24 Tue 09:30] =>  1:30
-  CLOCK: [2016-05-02 Mon 08:30]--[2016-05-02 Mon 09:10] =>  0:40
-  CLOCK: [2016-04-29 Fri 07:35]--[2016-04-29 Fri 07:45] =>  0:10
-  :END:
 
 #+BEGIN_SRC emacs-lisp
-(require 'tex)
-#+END_SRC
+  (require 'tex)
 
-** Braces and such
+  (setq LaTeX-command "latex"
+	LaTeX-electric-left-right-brace t
+	TeX-auto-save nil
+	TeX-command "tex"
+	TeX-electric-math (quote ("\\(" . "\\)"))
+	TeX-master t
+	TeX-parse-self t
+	TeX-PDF-mode t
+	TeX-source-correlate-method (quote synctex)
+	TeX-source-correlate-mode t
+	TeX-source-correlate-start-server t)
 
-Turn on electric mode (closing braces are automatically inserted, see [[info:auctex#Insertion of Quotes, Dollars, and Braces][Insertion of Quotes, Dollars, and Braces]] in the AUCTeX doc). Typing =C-q= before entering the opening brace deactivates this feature.
 
-#+BEGIN_SRC emacs-lisp
-(setq LaTeX-electric-left-right-brace t)
-(setq TeX-electric-math (quote ("\\(" . "\\)")))
-#+END_SRC
-
-** Multi-files projects
-
-By default, assume that the file is a master file.
-
-#+BEGIN_SRC emacs-lisp
-  (setq-default TeX-master t)
-#+END_SRC
-
-** UN_JOUR Files parsing
-
-This section needs some love.
-
-#+BEGIN_SRC emacs-lisp
-  (setq TeX-auto-save nil)
-  (setq TeX-parse-self t)
-#+END_SRC
-
-** Fontification of macros
-
-See [[info:auctex#Fontification of macros][Fontification of macros]] in the AUCTeX doc.
-
-#+BEGIN_SRC emacs-lisp
+  ;; TODO: is this really necessary?
   (setq font-latex-match-reference-keywords '(("citeauthor" "*{")
-                                              ("citetext" "{")
-                                              ("citeyear" "{")
-                                              ("citeyearpar" "{")
-                                              ("citep" "*[{")
-                                              ("citet" "*[{")
-                                              ("citealt" "*[{")
-                                              ("citealp" "*[{")))
-#+END_SRC
+					      ("citetext" "{")
+					      ("citeyear" "{")
+					      ("citeyearpar" "{")
+					      ("citep" "*[{")
+					      ("citet" "*[{")
+					      ("citealt" "*[{")
+					      ("citealp" "*[{")))
 
-** LaTeX processor
+  (put 'TeX-view-program-list 'variable-documentation
+       (concat (get 'TeX-view-program-list 'variable-documentation)
+	       "
 
-#+BEGIN_SRC emacs-lisp
-  (setq LaTeX-command "latex")
-  (setq-default TeX-PDF-mode t)
-  (setq TeX-command "tex")
-#+END_SRC
+  ------------------------------------------------------------------------
+  Note (SB): an entry \"SB PDF viewer\" must be defined.
 
-=TeX-next-error (C-c `)= sometimes fails. From the [[https://www.gnu.org/software/auctex/manual/auctex/FAQ.html][AUCTeX FAQ]]
+  For SumatraPDF (Windows platforms), set this variable to
 
-#+BEGIN_QUOTE
-When writing the log file, TeX puts information related to a file, including error
-messages, between a pair of parentheses. AUCTeX determines the file where the error
-happened by parsing the log file and counting the parentheses. This can fail when
-there are other, unbalanced parentheses present.
+      \"C:\\opt\\SumatraPDF-3.0\\SumatraPDF.exe
+      -reuse-instance -forward-search %b %n %o\".
 
-As a workaround you can activate so-called file:line:error messages for the log file.
-(Those are are easier to parse, but may lack some details.) Either you do this in the
-configuration of your TeX system (consult its manual to see where this is) or you add
-a command line switch to the (la)tex call, e.g. by customizing LaTeX-command-style or
-TeX-command-list.
-#+END_QUOTE
+  For Skim (MacOS X platforms), set this variable to
 
-#+BEGIN_SRC emacs-lisp
-(setq LaTeX-command-style '(("" "%(PDF)%(latex) -file-line-error %S%(PDFout)")))
-#+END_SRC
+      \"/Applications/Skim.app/Contents/SharedSupport/displayline
+      -r -b %n %o %b\".
+  ------------------------------------------------------------------------"))
 
-** Support for SyncTeX
-
-See [[info:auctex#Forward and Inverse Search][Forward and Inverse Search]] in the AUCTeX doc.
-
-#+BEGIN_SRC emacs-lisp
-  (setq TeX-source-correlate-method (quote synctex))
-  (setq TeX-source-correlate-mode t)
-  (setq TeX-source-correlate-start-server t)
+  ;; TODO Add this variable to my custom group
 #+END_SRC
 
 ** Viewers
