--- a/sb-init.org
+++ b/sb-init.org
@@ -494,28 +494,38 @@ CLOCK: [2016-12-05 Mon 08:30]--[2016-12-05 Mon 09:00] =>  0:30
 :END:
 
 #+BEGIN_SRC emacs-lisp
-  (defconst sb-dict-root (expand-file-name (concat invocation-directory
-						   "../share/LO_dicts/")))
-
-  (setenv "DICPATH" (concat sb-dict-root "en"
-			    ";"
-			    sb-dict-root "fr_FR"))
+  (defun sb-update-env-dicpath (value)
+    (setenv "DICPATH" (mapconcat #'identity value ";")))
 
   (setenv "DICTIONARY" "en_US")
 
+  (defcustom sb-dict-path nil
+    "The emacs equivalent of the DICPATH environment variable.
+
+  This is a list of directories where hunspell can find dictionaries."
+    :type '(repeat string)
+    :group 'sb
+    :tag "Path to Hunspell dictionaries"
+    :initialize (lambda (symbol value)
+		  (custom-initialize-reset symbol value)
+		  (sb-update-env-dicpath value))
+    :set (lambda (symbol value)
+	   (set-default symbol value)
+	   (sb-update-env-dicpath value)))
+
   (setq ispell-tex-skip-alists
-        (list
-         (append (car ispell-tex-skip-alists)
-                 '(("\\\\cite"            ispell-tex-arg-end)
-                   ("\\\\nocite"          ispell-tex-arg-end)
-                   ("\\\\includegraphics" ispell-tex-arg-end)
-                   ("\\\\author"          ispell-tex-arg-end)
-                   ("\\\\ref"             ispell-tex-arg-end)
-                   ("\\\\eqref"           ispell-tex-arg-end)
-                   ("\\\\label"           ispell-tex-arg-end)
-                   ("\\\\cite[tp]"        ispell-tex-arg-end)
-                   ))
-         (cadr ispell-tex-skip-alists)))
+	(list
+	 (append (car ispell-tex-skip-alists)
+		 '(("\\\\cite"            ispell-tex-arg-end)
+		   ("\\\\nocite"          ispell-tex-arg-end)
+		   ("\\\\includegraphics" ispell-tex-arg-end)
+		   ("\\\\author"          ispell-tex-arg-end)
+		   ("\\\\ref"             ispell-tex-arg-end)
+		   ("\\\\eqref"           ispell-tex-arg-end)
+		   ("\\\\label"           ispell-tex-arg-end)
+		   ("\\\\cite[tp]"        ispell-tex-arg-end)
+		   ))
+	 (cadr ispell-tex-skip-alists)))
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp
